k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-service
  namespace: default
spec:
  selector:
    app: nuxt-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
